@@ -66,16 +66,24 @@ NULL
    a
 1: 1
 2: 8
-> DT[1][,a:=9L]      # yes (since DT[1] is a new select) due to is.name in := in [.data.table
+> DT[1][,a:=9L]      # yes (since DT[1] is a new select) due to is.name in := in [.data.table  (but evaldepth is at tigger here)
    a
 1: 9
-> DT[2,a:=10L][1]    # yes
+> DT[2,a:=10L][1]    # yes (because eval depth is 9, above trigger, in the := here). Maybe this gets converted to nested `[.data.table` calls.
    a
 1: 1
-> DT[,a:=as.integer(a)]   # no (tests switch to detect recursive [.data.table call)
+> DT[1,a:=10L][1,a:=10L]   # want no, but yes currently. Might be tricky to get right. When multiple := in j is implemented, this goes away.
+    a
+1: 10
+2: 10
+> DT[,a:=as.integer(a)]   # no
 > DT[1,a:=as.integer(a)]  # no
+> DT[1,a:=10L][]     # yes. ...[] == oops, forgot print(...)
+    a
+1: 10
+2: 10
 > 
 > 
 > proc.time()
    user  system elapsed 
-  1.700   0.124   1.797 
+  1.740   0.096   1.810 
